feat: Update environment configuration and enhance project setup
- Added comments in .env.example for clarity on generating secrets and obtaining API keys.
- Introduced new environment variables for Google Analytics and GitHub configuration.
- Updated next.config.ts to ignore Cloudinary on the client side.
- Added new scripts in package.json for creating GitHub issues.
- Created README.md with comprehensive project documentation, including features, installation instructions, and environment variable setup.
- Refactored image/logo removal logic in edit forms to handle deletions via API.

--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,22 @@ DATABASE_URL="postgresql://user:password@host:port/database"
 
 # Next Auth Configuration
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET=""
+NEXTAUTH_SECRET=""  # Générer avec: openssl rand -base64 32
 
 # Resend API for emails
-RESEND_API_KEY=""
+RESEND_API_KEY=""  # Obtenir sur: https://resend.com/api-keys
+ADMIN_EMAIL=""     # Email pour recevoir notifications (demandes contact, inscriptions)
 
 # Cloudinary Storage (100% gratuit jusqu'à 25GB)
 # Obtenez vos credentials sur: https://cloudinary.com/console
 CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
+
+# Google Analytics 4 (optionnel)
+NEXT_PUBLIC_GA_ID=""  # Format: G-XXXXXXXXXX
+
+# GitHub Configuration (pour script création issues)
+GITHUB_TOKEN=""           # Personal Access Token avec permission 'repo'
+GITHUB_REPO_OWNER=""      # Ex: Cozetik
+GITHUB_REPO_NAME=""       # Ex: CoZetik-website
