--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "create-issues": "node scripts/create-github-issues.js",
+    "create-issues:dry-run": "node scripts/create-github-issues.js --dry-run",
+    "create-issues:cleanup": "node scripts/create-github-issues.js --cleanup"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
