--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "create-issues:dry-run": "node scripts/create-github-issues.js --dry-run",
     "create-issues:cleanup": "node scripts/create-github-issues.js --cleanup"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Cozetik/CoZetik-website.git"
