--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
+    "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
