--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "create-issues": "node scripts/create-github-issues.js",
     "create-issues:dry-run": "node scripts/create-github-issues.js --dry-run",
-    "create-issues:cleanup": "node scripts/create-github-issues.js --cleanup"
+    "create-issues:cleanup": "node scripts/create-github-issues.js --cleanup",
+    "upload:hero-video": "tsx scripts/upload-hero-video.ts"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -61,6 +62,7 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "next": "^15.4.10",
     "next-auth": "5.0.0-beta.25",
@@ -91,6 +93,7 @@
     "prettier": "^3.7.4",
     "tailwindcss": "^3.4.19",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
