feat: Migration système emailing vers React Email + Templates Cozetik 2025
🔧 Problème résolu :
- Emails d'acceptation (backoffice) ne s'envoyaient pas en production Vercel
- Cause : RESEND_FROM_EMAIL non configuré (utilisait défaut non fiable)
- Templates emails moches (gradients 2015, non responsive, pas de brand)

✨ Nouveautés :
- Migration complète vers React Email (standard 2025)
- Templates redesignés avec charte Cozetik (noir #262626, beige #F2E7D8, vert #5E985E)
- Composants réutilisables (CozetikLayout, CozetikButton, CozetikFooter)
- Preview mode temps réel : npm run email
- Support Reply-To (réponses vers nicoleoproject@gmail.com)

📦 Fichiers créés :
- emails/_components/CozetikLayout.tsx (Header noir + Footer branded)
- emails/_components/CozetikButton.tsx (CTA vert carré)
- emails/_components/CozetikFooter.tsx (Footer réutilisable)
- emails/contact-accepted.tsx (Template acceptation demande contact)
- emails/inscription-accepted.tsx (Template acceptation inscription)
- emails/README.md (Documentation complète)

🔄 Fichiers modifiés :
- lib/resend.ts (ajout replyTo support)
- app/api/requests/contact/[id]/status/route.ts (migration React Email)
- app/api/requests/inscriptions/[id]/status/route.ts (migration React Email)
- app/api/test-email/route.ts (support nouveaux templates)
- package.json (ajout script "email": "react-email dev")
- .env.example (ajout RESEND_FROM_EMAIL, RESEND_REPLY_TO)

📚 Documentation :
- Guide complet dans emails/README.md
- Checklist création nouveau template
- Troubleshooting

⚙️ Variables environnement requises (Vercel) :
RESEND_API_KEY=re_xxxxxxxxxxxxx
RESEND_FROM_EMAIL=noreply@cozetik.fr
RESEND_REPLY_TO=nicoleoproject@gmail.com

✅ Tests validés :
- Email contact-accepted envoyé avec succès
- Email inscription-accepted envoyé avec succès
- Reply-To fonctionnel
- Templates responsive Gmail/Outlook/Apple Mail

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,10 @@ NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET=""  # Générer avec: openssl rand -base64 32
 
 # Resend API for emails
-RESEND_API_KEY=""  # Obtenir sur: https://resend.com/api-keys
-ADMIN_EMAIL=""     # Email pour recevoir notifications (demandes contact, inscriptions)
+RESEND_API_KEY=""              # Obtenir sur: https://resend.com/api-keys
+RESEND_FROM_EMAIL=""           # Email expéditeur (ex: noreply@cozetik.fr)
+RESEND_REPLY_TO=""             # Email pour recevoir réponses (ex: contact@cozetik.fr)
+ADMIN_EMAIL=""                 # Email pour recevoir notifications (demandes contact, inscriptions)
 
 # Cloudinary Storage (100% gratuit jusqu'à 25GB)
 # Obtenez vos credentials sur: https://cloudinary.com/console
