--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "email": "react-email dev",
     "migrate": "prisma migrate deploy",
     "migrate:dev": "prisma migrate dev",
     "db:push": "prisma db push",
@@ -53,6 +54,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-visually-hidden": "^1.2.4",
+    "@react-email/components": "^1.0.2",
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-color": "^3.13.0",
     "@tiptap/extension-highlight": "^3.13.0",
@@ -79,6 +81,7 @@
     "react": "^19.2.3",
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.3",
+    "react-email": "^5.1.0",
     "react-hook-form": "^7.68.0",
     "resend": "^6.6.0",
     "sonner": "^2.0.7",
