fix: Corriger NEXTAUTH_URL pour utiliser domaine cozetik.fr
🔧 Problème résolu :
- Redirection admin vers vercel.app au lieu de cozetik.fr
- Cause : NEXTAUTH_URL pointait vers cozetik-website.vercel.app
- Impact : Utilisateurs redirigés vers mauvais domaine lors connexion admin

✨ Modifications :
- NEXTAUTH_URL : https://cozetik-website.vercel.app → https://cozetik.fr
- RESEND_FROM_EMAIL : onboarding@resend.dev → contact@cozetik.fr
- Ajout RESEND_REPLY_TO : nicoleoproject@gmail.com

✅ Résultat attendu :
- Accès https://cozetik.fr/admin → Reste sur cozetik.fr
- Login admin → Callback sur cozetik.fr/admin
- Emails envoyés depuis contact@cozetik.fr

⚠️ Action requise Vercel :
Configurer variables environnement :
- NEXTAUTH_URL=https://cozetik.fr
- RESEND_FROM_EMAIL=contact@cozetik.fr
- RESEND_REPLY_TO=nicoleoproject@gmail.com

--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 DATABASE_URL="postgresql://neondb_owner:npg_BrMgYsWGo82J@ep-autumn-hat-agtxvzwf-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require"
 
 # NextAuth
-NEXTAUTH_URL="https://cozetik-website.vercel.app"
+NEXTAUTH_URL="https://cozetik.fr"
 NEXTAUTH_SECRET="AgehzfD8ni7Kp9uxYSLnM3zmIqawEUqByKbR7s/Ajs4="
 
 # Cloudinary Storage
@@ -12,7 +12,8 @@ CLOUDINARY_API_SECRET="Qa-5y50sjvogRSqI71lEwWob6nU"
 
 # Resend (Email)
 RESEND_API_KEY="re_8gLT7yjk_8oZ1ozSdcLavVy382kSUse4A"
-RESEND_FROM_EMAIL="onboarding@resend.dev"
+RESEND_FROM_EMAIL="contact@cozetik.fr"
+RESEND_REPLY_TO="nicoleoproject@gmail.com"
 
 # Admin
 ADMIN_EMAIL="nicoleoproject@gmail.com"
