feat: Implémentation complète du système de Quiz Cozetik
## Frontend Public
- Page d'intro quiz avec design Cozetik (/quiz)
- Système de questions avec stepper animé (/quiz/questions)
- Page résultats avec recommandations IA (/quiz/resultats)
- Composants réutilisables (QuizStepper, QuizQuestion)
- Animations Framer Motion fluides
- Fix: Problème de sélection des réponses (conflit RadioGroup)

## Backend Backoffice
- CRUD complet pour les questions du quiz
- CRUD complet pour les profils
- Gestion des options de réponses
- Tables admin avec tri et filtres
- Toggle visibilité des questions

## API & Intelligence Artificielle
- Endpoint /api/quiz/recommandation
- Intégration Mistral AI pour les recommandations
- Système de profils basé sur les réponses
- Mapping questions -> profils -> formations

## Base de données
- Modèles Prisma (QuizQuestion, QuizOption, QuizProfile)
- Seed script pour données de test
- Relations question -> options -> profil

## Configuration
- Variables d'environnement (FASTAPI_URL, MISTRAL_API_KEY)
- Backend FastAPI sur port 3001
- Documentation QUIZ_TESTS.md

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ NEXT_PUBLIC_GA_ID=""  # Format: G-XXXXXXXXXX
 GITHUB_TOKEN=""           # Personal Access Token avec permission 'repo'
 GITHUB_REPO_OWNER=""      # Ex: Cozetik
 GITHUB_REPO_NAME=""       # Ex: CoZetik-website
+
+# FastAPI Backend (Quiz AI Recommendations)
+FASTAPI_URL=""            # URL du backend FastAPI (ex: http://localhost:8000 en local, https://xxx.railway.app en prod)
+MISTRAL_API_KEY=""        # Clé API Mistral AI pour le backend FastAPI
