--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "create-issues": "node scripts/create-github-issues.js",
     "create-issues:dry-run": "node scripts/create-github-issues.js --dry-run",
     "create-issues:cleanup": "node scripts/create-github-issues.js --cleanup",
-    "upload:hero-video": "tsx scripts/upload-hero-video.ts"
+    "upload:hero-video": "tsx scripts/upload-hero-video.ts",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:all": "vitest run && playwright test"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
