--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "gsap": "^3.14.2",
     "lenis": "^1.3.16",
     "lucide-react": "^0.561.0",
+    "marked": "^17.0.1",
     "next": "^15.4.10",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
@@ -105,6 +106,7 @@
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/marked": "^5.0.2",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
