feat(upload): Migrate from Cloudinary to Uploadthing for file uploads and management
- Updated environment variables to support Uploadthing.
- Replaced Cloudinary configuration and upload logic with Uploadthing API calls.
- Modified file upload and deletion functions to utilize Uploadthing.
- Updated relevant API routes and components to reflect the new storage solution.
- Removed Cloudinary setup documentation and related files.
- Adjusted tests to mock Uploadthing interactions instead of Cloudinary.

--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,9 @@ RESEND_FROM_EMAIL=""           # Email expéditeur (ex: noreply@cozetik.fr)
 RESEND_REPLY_TO=""             # Email pour recevoir réponses (ex: contact@cozetik.fr)
 ADMIN_EMAIL=""                 # Email pour recevoir notifications (demandes contact, inscriptions)
 
-# Cloudinary Storage (100% gratuit jusqu'à 25GB)
-# Obtenez vos credentials sur: https://cloudinary.com/console
-CLOUDINARY_CLOUD_NAME=""
-CLOUDINARY_API_KEY=""
-CLOUDINARY_API_SECRET=""
+# Uploadthing Storage (gratuit jusqu'à 2GB)
+# Obtenez votre token sur: https://uploadthing.com/dashboard
+UPLOADTHING_TOKEN=""
 
 # Google Analytics 4 (optionnel)
 NEXT_PUBLIC_GA_ID=""  # Format: G-XXXXXXXXXX
