--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "create-issues": "node scripts/create-github-issues.js",
     "create-issues:dry-run": "node scripts/create-github-issues.js --dry-run",
     "create-issues:cleanup": "node scripts/create-github-issues.js --cleanup",
-    "upload:hero-video": "tsx scripts/upload-hero-video.ts",
+    "upload:file": "tsx scripts/upload-local-to-uploadthing.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -74,9 +74,9 @@
     "@tiptap/extension-underline": "^3.13.0",
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
+    "@uploadthing/react": "^7.3.3",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
-    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "flubber": "^0.4.2",
@@ -98,6 +98,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.7.4",
     "zod": "^4.2.1"
   },
   "devDependencies": {
